# fastapi-poetry

./: items_ciews.py  main.py  pyproject.toml
users/: crud.py  schemas.py  views.py
