[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["mr-robot <alenjon2594@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pytest = "^8.0.0"
pydantic = {extras = ["email"], version = "^2.6.1"}
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
